form summary styles fixes for overflowing element, form step 4 validation fixes. User's imput is more strict and must follow instructions of step 4 form

--- a/src/styles/components/packageSending/_formSummary.scss
+++ b/src/styles/components/packageSending/_formSummary.scss
@@ -38,6 +38,11 @@
       margin-right: 1.375rem;
     }
   }
+
+  .courier-message-box {
+    height: 150px;
+    overflow: auto;
+  }
 }
 
 .donation-thanks-box {
